# DummyDB

./: README.md  docker-compose.yml  run_local.ps1
api/: .gitignore  Dockerfile  README.md  check_jobs.py  docker-compose.yml  main.py  pyproject.toml
api/schemas/: test_schema_schema_1753895788.json
api/scripts/: startup.py
api/src/: celery_app.py  main.py  test.py  worker.py
api/src/db/: models.py  session.py
api/src/lib/: auth.py  database.py  schemas.py  supabase_client.py
api/src/routers/: __init__.py  auth_router.py  dashboard_router.py  data_evaluator.py  jobs_router.py  nosql_router.py  parse_router.py  schema_parse_router.py  schema_router.py  seed_data_router.py  synthetic_router.py
api/src/routers/parse/: helpers.py
api/src/routers/seed/: constants.py  handler.py
api/src/routers/synthetic/: templates.py
api/src/services/: __init__.py  evaluation_service.py  file_service.py  job_service.py  schema_store.py  synthetic_service.py
api/src/utils/: arrow_utils.py  data_evaluator.py  file_manager.py  job_manager.py  llm_data_generator.py  migrations.py  mock_data_generator.py  mongodb_extractor.py  neo4j_extractor.py  pipeline_manager.py  quality_engine.py  rate_limiter.py  schema_parse.py  sdv_synthetic_generator.py  seed_data_generator.py  seeding_engine.py  supabase_extractor.py
api/synthetic_data/schema_bd21747f4c9e2339ef15d6dc7e840924/: categories_synthetic.csv  inventory_items_synthetic.csv  orders_synthetic.csv  products_synthetic.csv  users_synthetic.csv  warehouses_synthetic.csv
api/tests/: test_architecture.py
ui/: README.md  (+3 more)
(+91 files in other folders)
